syntax = "proto3";

package userService;

option go_package = "pkg/protobuf/userservice/gw";

service UserService {
  rpc GetUserByEmail(GetUserByEmailRequest) returns (GetUserByEmailResponse) {}
}

message GetUserByEmailRequest {
  string email = 1;
}

message GetUserByEmailResponse {
  User result = 1;
}

message User {
  int32 id = 1;
  string username = 2;
  string email = 3;
  string password = 4;
}

